UI design on Progress

--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 </head>
 <body>
     <div class="main">
-        <div class="player-1 player"></div>
-        <div class="player-2 player"></div>
+        <div class="player-1 player">
+            <h1 class="name1">Player 1</h1>
+            <p class="score">0</p>
+            <div class="currentScore">
+
+            </div>
+        </div>
+
+        <div class="center-section"></div>
+
+        <div class="player-2 player">
+            <h1 class="name2">Player 2</h1>
+            <p class="score">0</p>
+            <div class="currentScore">
+
+            </div>
+        </div>
     </div>
 
 
