--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roll Dice Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
         <div class="player-1 player">
-            <h1 class="name1">Player 1</h1>
-            <p class="score">0</p>
+            <div class="upperArea">
+                <h1 class="name1">Player 1</h1>
+                <p class="score">0</p>
+            </div>
             <div class="currentScore">
 
             </div>
@@ -19,8 +23,10 @@
         <div class="center-section"></div>
 
         <div class="player-2 player">
-            <h1 class="name2">Player 2</h1>
-            <p class="score">0</p>
+            <div class="upperArea">
+                <h1 class="name2">Player 2</h1>
+                <p class="score">0</p>
+            </div>
             <div class="currentScore">
 
             </div>
@@ -30,4 +36,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
