UI is going to be end

--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
                 <p class="score">0</p>
             </div>
             <div class="currentScore">
-
+                <p>Current Score</p>
+                <p id="currentScore1">0</p>
             </div>
         </div>
 
-        <div class="center-section"></div>
+        <div class="center-section">
+            <button>NEW GAME</button>
+            <img src="" alt="">
+            <button>ROLL DICE</button>
+            <button>HOLD</button>
+        </div>
 
         <div class="player-2 player">
             <div class="upperArea">
@@ -28,7 +34,8 @@
                 <p class="score">0</p>
             </div>
             <div class="currentScore">
-
+                <p>Current Score</p>
+                <p id="currentScore2">0</p>
             </div>
         </div>
     </div>
