Logic building started

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         <div class="center-section">
             <button>NEW GAME</button>
-            <img src="" alt="">
-            <button>ROLL DICE</button>
+            <img id="img" src="./Images/1.png" alt="">
+            <button onclick="rollDice()">ROLL DICE</button>
             <button>HOLD</button>
         </div>
 
