--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="player-1 player">
             <div class="upperArea">
                 <h1 class="name1">Player 1</h1>
-                <p class="score">0</p>
+                <p class="score score1">0</p>
             </div>
             <div class="currentScore">
                 <p>Current Score</p>
@@ -25,13 +25,13 @@
             <button>NEW GAME</button>
             <img id="img" src="./Images/1.png" alt="">
             <button onclick="rollDice()">ROLL DICE</button>
-            <button>HOLD</button>
+            <button onclick="hold()">HOLD</button>
         </div>
 
         <div class="player-2 player">
             <div class="upperArea">
                 <h1 class="name2">Player 2</h1>
-                <p class="score">0</p>
+                <p class="score score2">0</p>
             </div>
             <div class="currentScore">
                 <p>Current Score</p>
